# simba

./: CHANGELOG  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.circleci/: config.yml
.github/workflows/: simba-ci-build.yml
src/: lib.rs
src/scalar/: complex.rs  field.rs  fixed.rs  fixed_impl.rs  mod.rs  real.rs  subset.rs
src/simd/: auto_simd_impl.rs  mod.rs  packed_simd_impl.rs  portable_simd_impl.rs  rand_impl.rs  simd_bool.rs  simd_complex.rs  simd_impl.rs  simd_option.rs  simd_partial_ord.rs  simd_real.rs  simd_signed.rs  simd_value.rs  wide_simd_impl.rs
