[package]
name = "simba"
version = "0.1.4"
authors = ["sebcrozet <developer@crozet.re>"]
description = "SIMD algebra for Rust"
keywords = ["algebra", "simd", "math"]
readme = "README.md"
repository = "https://github.com/rustsim/simba"
documentation = "https://docs.rs/simba"
license = "BSD-3-Clause"
edition = "2018"

[features]
default = [ "std" ]
std = [ ]
partial_fixed_point_support = [ "fixed", "cordic" ]

[dependencies]
num-traits  = { version = "0.2.11", default-features = false, features = ["libm"] }
approx      = { version = "0.3", default-features = false }
decimal     = { version = "2.0", default-features = false, optional = true }
num-complex = { version = "0.2", default-features = false }
packed_simd = { version = "0.3", optional = true }
wide        = { version = "0.4", optional = true }
fixed       = { version = "0.5", optional = true }
cordic      = { version = "0.1", optional = true }
paste       = "0.1"
rand        = { version = "0.7", optional = true }

[package.metadata.docs.rs]
all-features = true
